# Scholar_projects

./: README.md
SE202_rust/Fibo/src/: main.rs
SE202_rust/Sujet/: 404.html  index.html  print.html  searchindex.js  searchindex.json
SE202_rust/Sujet/labs/: fibo.html
SE202_rust/Sujet/labs/led-matrix/: color.html  drawing.html  embedded.html  execution.html  hal.html  image-change.html  image.html  led-matrix.html  matrix.html  optimize-setup.html  real-time.html  reexport.html  rtic.html  screen-saver.html  serial.html  setup.html  structures.html  timer.html  toolchain.html  triple-buffering.html  uploading.html
SE202_rust/Sujet/labs/led-matrix/resources/: gamma.txt
SE202_rust/Sujet/labs/vm/: machine.html  specs.html
SE202_rust/Sujet/problems/: problems.html
SE202_rust/tp-led-matrix/: Cargo.toml
SE202_rust/tp-led-matrix/.cargo/: config.toml
SE202_rust/tp-led-matrix/src/: gamma.rs  image.rs  main.rs  matrix.rs
SE202_rust/tp-rust-2/tp-rust-2/src/: machine.rs
