[package]
name = "tp-led-matrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
cortex-m-rtic = "1.1.4"
defmt = "0.3.4"
defmt-rtt = "0.4.0"
dwt-systick-monotonic = "1.1.0"
heapless = "0.7.16"
micromath = "2.0.0"
panic-probe = { version = "0.3.1", features = ["print-defmt"] }
stm32l4xx-hal = { git = "https://github.com/stm32-rs/stm32l4xx-hal", features = ["stm32l475", "rt"], rev = "46006b9e2c2d2ea5ea9a00409505e17d16279e1f" }

[[bin]]
name = "tp-led-matrix"
